amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-union.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-union.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-union
  Message: Union definitions must have at least one value
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty-union.api.graphql#/declares/union/SearchResult
  Property: 
  Range: [(19,0)-(19,20)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#antlr-error
  Message: Syntax error: Unexpected end of file
  Severity: Violation
  Target: 
  Property: 
  Range: [(19,20)-(19,20)]
  Location: 
